@@ -49,6 +49,14 @@
   <project_group>GNOME</project_group>
 
   <releases>
+    <release date="2018-03-05" version="3.27.92">
+      <description>
+        <p>This is the release candidate version of the next big release of GNOME Calendar, and it brings a few Flatpak improvements.</p>
+        <p>This release also updates many translations.</p>
+        <p>Thanks to all the contributors that worked on GNOME Calendar!</p>
+      </description>
+    </release>
+
     <release date="2018-02-12" version="3.27.90">
       <description>
         <p>This is the alpha version of the next big release of GNOME Calendar, and it brings the following new features and improvements:</p>
